--- a/ci/pipeline-template.yaml
+++ b/ci/pipeline-template.yaml
@@ -204,8 +204,8 @@ jobs:
           params:
             FIRMWARE_VERSION: 0.0.0
             GITHUB_SSH_KEY: ((github-repo-key))
-            OTA_HOSTNAME: http://wallserver.local
-            OTA_PORT: 8266
+            OTA_HOSTNAME: http://lab.petewall.net/firmware
+            OTA_PORT: 80
             WIFI_SSID: fake-ssid
             WIFI_PASSWORD: fake-password
           inputs:
@@ -219,7 +219,13 @@ jobs:
         file: source/ci/tasks/build.yml
         params:
           GITHUB_SSH_KEY: ((github-repo-key))
-          OTA_HOSTNAME: http://wallserver.local
-          OTA_PORT: 8266
+          OTA_HOSTNAME: http://lab.petewall.net/firmware
+          OTA_PORT: 80
           WIFI_SSID: ((wifi-ssid))
           WIFI_PASSWORD: ((wifi-password))
+      - task: upload
+        image: platformio
+        file: firmware-service-source/ci/tasks/upload.yml
+        params:
+          TYPE: bootloader
+          FIRMWARE_SERVICE: http://lab.petewall.net/firmware
