--- a/deployment/firmware-service.yaml
+++ b/deployment/firmware-service.yaml
@@ -1,4 +1,24 @@
 ---
+apiVersion: kapp.k14s.io/v1alpha1
+kind: Config
+rebaseRules:
+- path: [metadata, annotations, volume.kubernetes.io/selected-node]
+  type: copy
+  sources: [existing, new]
+  resourceMatchers:
+  - kindNamespaceNameMatcher:
+      kind: PersistentVolumeClaim
+      name: firmware-store
+      namespace: device-manager
+- path: [metadata, annotations, volume.kubernetes.io/storage-provisioner]
+  type: copy
+  sources: [existing, new]
+  resourceMatchers:
+  - kindNamespaceNameMatcher:
+      kind: PersistentVolumeClaim
+      name: firmware-store
+      namespace: device-manager
+---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
