--- a/deployment/ota-service.yaml
+++ b/deployment/ota-service.yaml
@@ -52,10 +52,10 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-  - host: device.petewall.net
+  - host: cluster.petewall.net
     http:
       paths:
-      - path: /update
+      - path: /devices/api/update
         pathType: Exact
         backend:
           service:
